Sun Apr  6 13:20:47 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - clients/upsclient.c: add some sanity checks

Sun Apr  6 12:29:52 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - man/netxml-ups.8: be more verbose in explanation of the 'timeout'
   value that can be specified in 'ups.conf'

Sun Apr  6 11:41:03 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - drivers/netxml-ups: require connectivity test to pass and fix
   some minor cosmetic things

Sun Apr  6 11:04:02 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - common/state.c,include/state.h: don't use recursion if we are only
   walking through a tree or list

Sun Apr  6 08:30:06 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - drivers/netxml-ups: use connect with timeout to prevent the
   server declaring us stale (requires neon-0.27.0 or newer)

Sat Apr  5 16:03:25 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - drivers/netxml-ups: add connectivity test

Sat Apr  5 13:25:03 UTC 2008 / Alexander I. Gordeev <lasaine@lvk.cs.msu.su>

 - drivers/megatec_usb.c: resurrected an old version of agiler
   subdriver for testing.

Fri Apr  4 21:09:16 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - drivers/main.c: check for the exit flag

Fri Apr  4 21:04:52 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - drivers/netxml-ups: added some debugging code and a timeout
   parameter that allows changing the network timeouts
 - m4/nut_check_libneon.m4: use pkg-config to reveal the version
   of the installed neon library

Thu Apr  3 20:43:29 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - drivers/main.c: keep polling the filedescriptors until the poll
   interval has elapsed or the 'extrafd' draws the attention
   (previously, anything happening on the filedescriptors, would
   trigger upsdrv_updateinfo() too, even errors)
 - drivers/dstate.[ch]: see the above
 - drivers/dstate-hal.[ch]: added sleep here, to limit the polling
   rate (previously, the driver would completely ignore the poll